--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,23 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
+src/*.exe
+src/smallchange
+src/test_smallchange
+src/build.h
+.*.swp
+*.*~*
+*.bak
+*.rej
+*.orig
 *.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+*.patch
+.bitcoin
+#compilation and Qt preprocessor part
+*.qm
+Makefile
+smallchange-qt
+#resources cpp
+qrc_*.cpp
+#qt creator
+*.pro.user
+#mac specific
+.DS_Store
+build
